<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/sound_meter"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:max="8000000"
        android:layout_height="96dp"
        android:indeterminate="false"
        android:indeterminateOnly="false" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_check_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_check_volume" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_record" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btn_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_stop" />

    </LinearLayout>

    <Spinner
        android:id="@+id/source_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Spinner>

    <SeekBar
        android:id="@+id/seekbar_volume_change"
        android:layout_width="300dp"
        android:layout_height="48dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/format_mp4"
            android:layout_width="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:text="@string/format_mp4"/>
        <RadioButton
            android:id="@+id/format_wav"
            android:layout_width="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:text="@string/format_wav"/>
    </RadioGroup>

</LinearLayout>